Edited createaccount.test and profile.html(included bug report button) and Added bugreportpage.html

--- a/gamedev/public_html/profile.html
+++ b/gamedev/public_html/profile.html
@@ -25,6 +25,12 @@
 
         <!-- User Guide Button (placed within the container) -->
         <button id="guideButton">User Guide</button>
+        <button id="bugReportButton">Report a Bug</button>
+        <script>
+            document.getElementById('bugReportButton').addEventListener('click', () => {
+              window.location.href = 'bugreportpage.html';
+            });
+          </script>
     </div>
 
     <!-- Modal for the User Guide -->
