Changed 'Distance Claimed' to 'Area Claimed'

--- a/gamedev/public_html/profile.html
+++ b/gamedev/public_html/profile.html
@@ -16,7 +16,7 @@
         </div>
         <div class="stats">
             <p><strong>Total Distance Ran:</strong> <span id="totalDistance"></span></p>
-            <p><strong>Total Distance Claimed:</strong> <span id="totalClaimed"></span></p>
+            <p><strong>Total Area Claimed:</strong> <span id="totalClaimed"></span></p>
         </div>
         <div class="achievements-header">Weekly Achievements</div>
         <div class="achievements" id="achievements">
