--- a/gamedev/public_html/index.html
+++ b/gamedev/public_html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script src="loginpage.js" defer></script>
-    <div class="login-container">
+    <div id="login-container" class="login-container">
         <h1>Welcome Back!</h1>
         <form action="#" method="POST">
             <label for="email">Email:</label>
