--- a/gamedev/public_html/index.html
+++ b/gamedev/public_html/index.html
@@ -22,7 +22,7 @@
         <p></p>
         <a href="createaccount.html">Don't have an account? Create one!</a>
         <div class="error-message" id="login-error-message">
-            <p>Incorrect email or password. Please try again. </p><!--  Display wrong password/no user here  -->
+            <p>Incorrect email or password. Please try again. </p>
         </div>
     </div>
 </body>
